fix: add arrows for nav links

--- a/recipes/bibingka.html
+++ b/recipes/bibingka.html
@@ -51,11 +51,11 @@
         </div>  
 
         <div class="links">
-            <a href="../recipes/biko.html">Previous</a>
+            <a href="../recipes/biko.html">&#8592; Prev</a>
             |
             <a href="../index.html">Home</a>
             | 
-            <a href="../recipes/maja.html">Next</a>
+            <a href="../recipes/maja.html">Next &#8594;</a>
         </div>
     </div>
 </body>
