--- a/recipes/biko.html
+++ b/recipes/biko.html
@@ -42,11 +42,11 @@
         </div>  
 
         <div class="links">
-            <a href="../recipes/maja.html">Previous</a>
+            <a href="../recipes/maja.html">&#8592; Prev</a>
             |
             <a href="../index.html">Home</a>
             | 
-            <a href="../recipes/bibingka.html">Next</a>
+            <a href="../recipes/bibingka.html">Next &#8594;</a>
         </div>
     </div>
 </body>
