--- a/recipes/maja.html
+++ b/recipes/maja.html
@@ -41,11 +41,11 @@
         </div>  
 
         <div class="links">
-            <a href="../recipes/bibingka.html">Previous</a>
+            <a href="../recipes/bibingka.html">&#8592; Prev</a>
             |
             <a href="../index.html">Home</a>
             | 
-            <a href="../recipes/biko.html">Next</a>
+            <a href="../recipes/biko.html">Next &#8594;</a>
         </div>
     </div>
 </body>
